# Crystal-prediction

./: .gitignore  README.md  pyproject.toml
data/raw/: materials_project_summary.csv
models/matbench_mp_e_form/alignn/: alignn.pt  history.json
models/matbench_mp_e_form/cgcnn/: cgcnn.pt  history.json
models/matbench_mp_e_form/m3gnet/: history.json  m3gnet.pt
models/matbench_mp_gap/alignn/: alignn.pt  history.json
models/matbench_mp_gap/cgcnn/: cgcnn.pt  history.json
models/matbench_mp_gap/m3gnet/: history.json  m3gnet.pt
models/matbench_mp_is_metal/alignn/: alignn.pt  history.json
models/matbench_mp_is_metal/cgcnn/: cgcnn.pt  history.json
models/matbench_mp_is_metal/m3gnet/: history.json  m3gnet.pt
reports/: metrics_summary.json  summary.md
scripts/: run_pipeline.py
src/mp_crystal_ml/: __init__.py  config.py  data.py  models.py  pipeline.py  reporting.py
